--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ footer {
     display: flex;
     flex-flow: column wrap;
     height: 580px;
-    padding: 32px;
+    padding: 20px;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Outfit', sans-serif;
     background-color: var(--preto_besouro);
@@ -172,7 +172,7 @@ footer a {
     color: var(--branco_besouro);
 }
 
-@media (min-width: 888px) {
+@media (min-width: 834px) {
     header {
         display: flex;
         flex-direction: row;
@@ -205,7 +205,7 @@ footer a {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
-        min-width: 888px;
+        min-width: 834px;
         height: 640px;
         padding: 30px;
         font-family: 'Montserrat', sans-serif;
@@ -309,14 +309,16 @@ footer a {
     footer {
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        flex-flow: row wrap;
         font-family: 'Montserrat', sans-serif;
         font-family: 'Outfit', sans-serif;
         background-color: var(--preto_besouro);
         color: var(--branco_besouro);
         text-align: center;
         width: auto;
-        height: 240px;
-        padding: 40px;
+        height: 360px;
+        padding: 30px;
         line-height: 1.6em;
     }
     footer a {
