--- a/css/style.css
+++ b/css/style.css
@@ -146,16 +146,17 @@ article {
 
 footer {
     display: flex;
-    flex-flow: column wrap;
-    height: 580px;
-    padding: 20px;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Outfit', sans-serif;
-    background-color: var(--preto_besouro);
-    color: var(--branco_besouro);
+    justify-content: center;
+    align-items: center;
+    height: 2rem;
+    background: var(--preto_besouro);
+    padding: 2rem;
+    align-self: center;
     text-align: center;
-    line-height: 1.6em;
-
+    margin: 0 auto;
+    font-family: "Montserrat", sans-serif;
+    font-size: 1rem;
+    color: var(--branco_besouro);
 }
 
 footer h1 {
@@ -305,24 +306,18 @@ footer a {
         font-weight: 600;
     }
     
-    
     footer {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
-        flex-flow: row wrap;
-        font-family: 'Montserrat', sans-serif;
-        font-family: 'Outfit', sans-serif;
-        background-color: var(--preto_besouro);
-        color: var(--branco_besouro);
+        height: 2rem;
+        background: var(--preto_besouro);
+        padding: 2rem;
+        align-self: center;
         text-align: center;
-        width: auto;
-        height: 360px;
-        padding: 30px;
-        line-height: 1.6em;
+        margin: 0 auto;
+        font-family: "Montserrat", sans-serif;
+        font-size: 1rem;
+        color: var(--branco_besouro);
     }
-    footer a {
-            color: var(--azul_besouro);
-    }
-        
 }
